# src/components/vacation/vacation.routes.ts
@@ -5,11 +5,13 @@ import { checkSuperAdminRole } from '../../../middleware/checkSuperAdminRole';
 
 const router = express.Router();
 
-router.get('/vacation/filter', vacationController.filterVacationRequests);
+router.get('/vacation/filter/:key/:value', vacationController.filterVacationRequests);
 
 router.get('/vacation/:requestId', vacationController.getVacationRequestById);
 
-router.get('/vacation', checkSuperAdminRole, vacationController.getUserVacationRequests);
+router.get('/vacation/:employeeId/:page/:limit/:column/:order', vacationController.getUserVacationRequests);
+
+router.get('/vacation/allVacations', checkSuperAdminRole, vacationController.getAllVacationRequests);
 
 router.post('/vacation', vacationController.createVacationRequest);
 
