# src/swagger.json
@@ -240,7 +240,7 @@
         }
       }
     },
-    "/userInfo/{employeeId}": {
+    "/user/{employeeId}/info": {
       "get": {
         "summary": "Get user information",
         "parameters": [
@@ -867,7 +867,7 @@
     "/vacation": {
       "post": {
         "summary": "Create a new vacation request",
-        "description": "Creates a new vacation request for an employee. The employee ID, start date, end date, and reason are required.",
+        "description": "Creates a new vacation request for an employee. The employee ID, start timestamp, end timestamp, and reason are required.",
         "requestBody": {
           "required": true,
           "content": {
@@ -887,16 +887,16 @@
                     "example": 1
                   },
                   "dateFrom": {
-                    "type": "string",
-                    "format": "date-time",
-                    "description": "The start date of the vacation request.",
-                    "example": "2024-08-01T00:00:00Z"
+                    "type": "integer",
+                    "format": "int64",
+                    "description": "The start timestamp of the vacation request.",
+                    "example": 1690848000
                   },
                   "dateTo": {
-                    "type": "string",
-                    "format": "date-time",
-                    "description": "The end date of the vacation request.",
-                    "example": "2024-08-07T00:00:00Z"
+                    "type": "integer",
+                    "format": "int64",
+                    "description": "The end timestamp of the vacation request.",
+                    "example": 1691452800
                   },
                   "reason": {
                     "type": "string",
@@ -934,21 +934,21 @@
                           "example": 1
                         },
                         "dateFrom": {
-                          "type": "string",
-                          "format": "date-time",
-                          "description": "The start date of the vacation request.",
-                          "example": "2024-08-01T00:00:00Z"
+                          "type": "integer",
+                          "format": "int64",
+                          "description": "The start timestamp of the vacation request.",
+                          "example": 1690848000
                         },
                         "dateTo": {
-                          "type": "string",
-                          "format": "date-time",
-                          "description": "The end date of the vacation request.",
-                          "example": "2024-08-07T00:00:00Z"
+                          "type": "integer",
+                          "format": "int64",
+                          "description": "The end timestamp of the vacation request.",
+                          "example": 1691452800
                         },
                         "reason": {
                           "type": "string",
                           "description": "The reason for the vacation request.",
-                          "example": "Vacation for family trip"
+                          "example": "Vacation"
                         },
                         "status": {
                           "type": "string",
@@ -1015,26 +1015,42 @@
             }
           }
         }
-      }
-    },
-    "/vacation/{employeeId}": {
+      },
       "get": {
-        "summary": "Get all vacation requests for an employee",
-        "description": "Retrieves all vacation requests for a specific employee based on the provided employee ID.",
+        "summary": "Retrieve user vacation requests",
+        "description": "Retrieves a paginated list of vacation requests for a specific employee.",
         "parameters": [
           {
-            "in": "path",
+            "in": "query",
             "name": "employeeId",
             "required": true,
             "schema": {
               "type": "integer"
             },
-            "example": 1
+            "description": "The ID of the employee"
+          },
+          {
+            "in": "query",
+            "name": "page",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            },
+            "description": "The page number for pagination"
+          },
+          {
+            "in": "query",
+            "name": "limit",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            },
+            "description": "The number of records per page"
           }
         ],
         "responses": {
           "200": {
-            "description": "Successfully retrieved vacation requests for the employee",
+            "description": "A list of user vacation requests",
             "content": {
               "application/json": {
                 "schema": {
@@ -1044,25 +1060,23 @@
                     "properties": {
                       "id": {
                         "type": "integer",
-                        "example": 1
+                        "description": "The request ID"
                       },
                       "dateFrom": {
-                        "type": "string",
-                        "format": "date-time",
-                        "example": "2024-08-01T00:00:00Z"
+                        "type": "integer",
+                        "format": "int64",
+                        "description": "Start timestamp of the vacation",
+                        "example": 1690848000
                       },
                       "dateTo": {
-                        "type": "string",
-                        "format": "date-time",
-                        "example": "2024-08-07T00:00:00Z"
-                      },
-                      "reason": {
-                        "type": "string",
-                        "example": "Vacation for family trip"
+                        "type": "integer",
+                        "format": "int64",
+                        "description": "End timestamp of the vacation",
+                        "example": 1691452800
                       },
                       "status": {
                         "type": "string",
-                        "example": "Pending"
+                        "description": "Status of the request"
                       }
                     }
                   }
@@ -1071,7 +1085,7 @@
             }
           },
           "400": {
-            "description": "Missing Employee ID",
+            "description": "Missing or invalid parameters",
             "content": {
               "application/json": {
                 "schema": {
@@ -1079,7 +1093,7 @@
                   "properties": {
                     "message": {
                       "type": "string",
-                      "example": "Employee ID is required"
+                      "description": "Error message"
                     }
                   }
                 }
@@ -1095,7 +1109,7 @@
                   "properties": {
                     "message": {
                       "type": "string",
-                      "example": "Employee not found"
+                      "description": "Error message"
                     }
                   }
                 }
@@ -1111,7 +1125,7 @@
                   "properties": {
                     "message": {
                       "type": "string",
-                      "example": "Error fetching requests"
+                      "description": "Error message"
                     }
                   }
                 }
@@ -1121,7 +1135,7 @@
         }
       }
     },
-    "/vacation/admin/{requestId}/{status}": {
+    "/vacation/{requestId}/admin/{status}": {
       "put": {
         "summary": "Update the status of a vacation request by admin",
         "description": "Updates the status of a vacation request identified by the `requestId` and `status`.",
@@ -1221,7 +1235,7 @@
         }
       }
     },
-    "/vacation/admin/{requestId}": {
+    "/vacation/{requestId}/admin": {
       "put": {
         "summary": "Update details of a vacation request by admin",
         "description": "Updates the details of a vacation request identified by the `requestId`.",
@@ -1366,9 +1380,6 @@
       "get": {
         "summary": "Get vacation requests by team",
         "description": "Fetches all vacation requests for employees in the specified team.",
-        "tags": [
-          "Vacation"
-        ],
         "parameters": [
           {
             "name": "teamId",
@@ -1430,7 +1441,7 @@
         }
       }
     },
-    "/user/role/{employeeId}/{role}": {
+    "/user/{employeeId}/role/{role}": {
       "put": {
         "summary": "Update the role of an employee",
         "description": "Update the role of an employee by their ID.",
@@ -1527,6 +1538,79 @@
                 }
               }
             }
+          }
+        }
+      }
+    },
+    "/vacation/allVacations": {
+      "get": {
+        "summary": "Retrieve all vacation requests",
+        "description": "Retrieves a list of all vacation requests.",
+        "responses": {
+          "200": {
+            "description": "Successfully retrieved vacation requests",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "status": {
+                      "type": "integer",
+                      "description": "The HTTP status code"
+                    },
+                    "data": {
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "properties": {
+                          "id": {
+                            "type": "integer",
+                            "description": "Vacation request ID"
+                          },
+                          "employee": {
+                            "type": "object",
+                            "properties": {
+                              "id": {
+                                "type": "integer",
+                                "description": "Employee ID"
+                              },
+                              "name": {
+                                "type": "string",
+                                "description": "Employee name"
+                              }
+                            }
+                          },
+                          "status": {
+                            "type": "object",
+                            "properties": {
+                              "name": {
+                                "type": "string",
+                                "description": "Status name"
+                              }
+                            }
+                          },
+                          "reason": {
+                            "type": "object",
+                            "properties": {
+                              "name": {
+                                "type": "string",
+                                "description": "Reason name"
+                              }
+                            }
+                          }
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "No vacation requests found"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
